--- a/forum/templates/forum/snippets/forum_header.html
+++ b/forum/templates/forum/snippets/forum_header.html
@@ -1,4 +1,4 @@
-<div class="ibox-content m-b-sm border-bottom" style="margin-bottom: 10px;">
+<div class="ibox-content m-b-sm border-bottom" style="margin-bottom: 10px; border-radius: 10px;">
     <div class="forum-icon">
         <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 2rem;" width="70" height="70" src="{{ subject.image.url }}" />
     </div>
