--- a/marketplace/templates/marketplace/marketplace.html
+++ b/marketplace/templates/marketplace/marketplace.html
@@ -1,4 +1,4 @@
-{% extends 'personal/home.html' %}
+{% extends 'personal/home_wide.html' %}
 {% load crispy_forms_tags %}
 {% load humanize %}
 {% block post %}
@@ -22,7 +22,8 @@
         transition: all 0.3s linear 0s;
         overflow: hidden;
         position: relative;
-        margin: 5px auto;
+        margin-left: 3px;
+        margin-bottom: 3px;
         cursor: pointer;
     }
 
