--- a/marketplace/templates/marketplace/marketplace_edit.html
+++ b/marketplace/templates/marketplace/marketplace_edit.html
@@ -1,4 +1,4 @@
-{% extends 'personal/home.html' %}
+{% extends 'personal/home_wide.html' %}
 {% load crispy_forms_tags %}
 {% load humanize %}
 {% block post %}
