--- a/post/templates/post/snippets/post_list_tweet_box.html
+++ b/post/templates/post/snippets/post_list_tweet_box.html
@@ -13,7 +13,7 @@
       width: 100%;
       border-radius: 15px;
       padding: 25px 25px 15px 25px;
-      box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+      box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
     }
     .input-box{
       padding-top: 10px;
@@ -138,7 +138,7 @@
 </style>
 {% endblock head %}
 
-<div class="wrapper"> 
+<div class="wrapper mb-2"> 
     <form onsubmit='return copyContent()' method= "post" hx-encoding="multipart/form-data" hx-post= "{% url 'home' %}" hx-swap="innerHTML" hx-target = "#post-content">
     <div class="input-box">
       <div class="tweet-area">
