--- a/forum/templates/forum/forum_content.html
+++ b/forum/templates/forum/forum_content.html
@@ -229,8 +229,8 @@
     tinymce.init({
       selector: 'textarea',
       height: 500,
-      plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste tinycomments tinymcespellchecker image code',
-      toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen image',
+      plugins: 'autolink lists media table image code',
+      toolbar: 'addcomment showcomments checklist code table image',
       toolbar_mode: 'floating',
       tinycomments_mode: 'embedded',
       tinycomments_author: 'Author name',
