--- a/forum/templates/forum/forum_detail_2.html
+++ b/forum/templates/forum/forum_detail_2.html
@@ -207,8 +207,8 @@
       selector: 'textarea',
       body_id : "reply",
       height: 200,
-      plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker image code',
-      toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen table image',
+      plugins: 'autolink lists media table image code',
+      toolbar: 'addcomment showcomments checklist code table image',
       toolbar_mode: 'floating',
       tinycomments_mode: 'embedded',
       tinycomments_author: 'Author name',
