--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -10,7 +10,7 @@
         </a>
         
         <div class="tweet-header-info">
-          <span>@{{ result.author }}</span><span> . {{ result.created_on|naturaltime }}</span>
+          <span style="color: black;">{{request.user.profile.fullname}}</span><span>@{{ result.author }}</span><span> {{ result.created_on|naturaltime }}</span>
           <div class="body-post" id="body-post-{{result.pk}}" style="font-weight:normal; transform: rotate(0);">
             <p id="body-p-{{results.pk}}">{{ result.body|safe }}</p>
             {% if result.image.count > 0 %}
@@ -125,7 +125,7 @@
         <div class="comments">
           <a href="{% url 'post:post-detail' result.pk %}" style="text-decoration: none;">
           <svg class="feather feather-message-circle sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></a>
-          <div class="comment-count">count</div>
+          <div class="comment-count">{{result.comment_parent.count}}</div>
         </div>
         
         <div class="likes">
@@ -153,7 +153,7 @@
         </a>
         
         <div class="tweet-header-info">
-          <span>@{{ result.author }}</span><span> has posted to marketplace at {{ result.created_on|naturaltime }}</span><span class="label label-success">Marketplace</span>
+          <span style="color: black;">{{request.user.profile.fullname}}</span><span>@{{ result.author }}</span><span> has posted to marketplace at {{ result.created_on|naturaltime }}</span><span class="label label-success">Marketplace</span>
           <div class="body-post" style="font-weight:normal; transform: rotate(0);">
             <a href="{% url 'marketplace:marketplace-detail' result.pk %}" style="color: black;">
             <p><strong>{{ result.title|safe }}</strong></p>
@@ -183,7 +183,7 @@
         </a>
         
         <div class="tweet-header-info">
-          <span>@{{ result.author }}</span><span> asked on {{result.subject.title}} at {{ result.created_on|naturaltime }}</span><span class="label label-info">Forum</span>
+          <span style="color: black;">{{request.user.profile.fullname}}</span><span>@{{ result.author }}</span><span> asked on {{result.subject.title}} at {{ result.created_on|naturaltime }}</span><span class="label label-info">Forum</span>
           <div class="body-post" style="font-weight:normal; transform: rotate(0);">
             <a href="{% url 'forum:forum-detail' result.pk %}" style="color: black;">
             <p><strong>{{ result.title|safe }}</strong></p>
@@ -199,13 +199,13 @@
     <div class="tweet-wrap infinite-item">
       <div class="tweet-header">
         <a href="{% url 'account:view' user_id=result.author.profile.pk %}">
-            <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ result.author.profile_image.url }}" />
+            <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 2rem;" width="50" height="50" src="{{ result.author.profile_image.url }}" />
         </a>
         
         <div class="tweet-header-info" style="clear: both;">
-          <span>@{{ result.author }}</span><span> posted to Blog at {{ result.created_on|date:"F d, Y" }} {{ result.created_on|naturaltime }}</span><span class="label label-warning">Blog</span>
+          <span style="color: black;">{{request.user.profile.fullname}}</span><span>@{{ result.author }} posted to Blog {{ result.created_on|naturaltime }}</span><span class="label label-warning">Blog</span>
           <div class="body-post" style="font-weight:normal; transform: rotate(0);">
-            <div class="container border rounded p-0 mt-5">
+            <div class="container border rounded p-0 mt-4">
               <div class="row no-gutters">
                 <a href="{% url 'blog:blog-detail' result.pk %}" style="color: black;">
                   <span style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;z-index: 1;"></span> 
@@ -225,7 +225,15 @@
                       window.addEventListener("DOMContentLoaded", () => {
                         const postBody = document.getElementById("blog-body-{{result.pk}}");
                         const postBodyImg = document.getElementById("blog-body-img-{{result.pk}}");
-                        let body = JSON.parse("{{result.body|escapejs}}");
+
+                        const text = "{{result.body|escapejs}}";
+                        const words = text.trim().split(/\s+/).length;
+                        const wpm = 225;
+                        const time = Math.ceil(words / wpm);
+                        const readTime = document.getElementById("blog-min-read-{{result.pk}}");
+                        readTime.innerHTML = time;
+
+                        let body = JSON.parse(text);
                         let blocks = body.blocks;
                         let imageFlag = false;
                         let textBody = "";
@@ -240,7 +248,7 @@
                                 let div = document.createElement("div");
                                 let image = document.createElement("img");
                                 image.src = `${blocks[index].data.file.url}`;
-                                image.style = "vertical-align: middle;"
+                                image.style = "vertical-align: middle; width: 100%; height: 100%; object-fit: cover;"
                                 postBodyImg.appendChild(image);
                                 imageFlag = true;
                               }
@@ -274,8 +282,8 @@
                   </div>
                 </div>
                 <div class="col-md-3 p-0">
-                  <div class="bg-light">
-                    <div id="blog-body-img-{{result.pk}}">
+                  <div class="bg-light" style="height: 100%;">
+                    <div id="blog-body-img-{{result.pk}}" style="height: 100%;">
                       
                     </div>
                     
@@ -286,7 +294,13 @@
           </div>
         </div>
         
+
       </div>
+      <div class="tweet-info-counts">
+        <span class="mr-4">{{ result.created_on|date:"F d, Y" }} </span>
+        <span class="mr-4"><span id="blog-min-read-{{result.pk}}"></span> min read </span>
+        <span style="float: right; color: grey;"><i class="fas fa-bookmark"></i></span>
+      </div>  
     </div>
     {% endif %}
 {% endfor %}
