--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -10,21 +10,55 @@
     font-weight: 950;
     line-height: 1.5;
   }
+  .heart {
+      height: 29px;
+      width: 29px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: grey;
+  }
+
+  .heart-clicked {
+      height: 29px;
+      width: 29px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: coral;
+  }
 </style>
 {% endblock head %}
 {% block post %}
 <div class="container border p-3" style="border-radius: 10px; background-color: #fff;">
   <div class="pl-3 pr-3" style="width: 80%; margin: auto; overflow: hidden;">
     <h2 id="h2ost-title">{{post.title}}</h2>
-    <div>
-      <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-        <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.author.profile_image.url }}" />
-      </a>
-      <span>{{ post.author.username }}</span>
-      <p>{{ post.created_on|date:"F d, Y" }} . <span id="read_time"></span> min read</p>
+    <div class="container">
+      <div class="row no-gutters">
+        <div class="col-md-10">
+         <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
+            <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.author.profile_image.url }}" />
+         </a>
+         <span>{{ post.author.username }}</span>
+         <p>{{ post.created_on|date:"F d, Y" }} . <span id="read_time"></span> min read</p>
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-transparent p-0 mr-2" type="submit" onclick="sentAJAX_readList({{post.pk}})">
+              <span class="{% if request.user in post.read_list.all %} heart-clicked {% else %} heart {% endif %}" id="read-list-button-{{post.pk}}"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" class="svg-inline--fa fa-book-open" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M144.3 32.04C106.9 31.29 63.7 41.44 18.6 61.29c-11.42 5.026-18.6 16.67-18.6 29.15l0 357.6c0 11.55 11.99 19.55 22.45 14.65c126.3-59.14 219.8 11 223.8 14.01C249.1 478.9 252.5 480 256 480c12.4 0 16-11.38 16-15.98V80.04c0-5.203-2.531-10.08-6.781-13.08C263.3 65.58 216.7 33.35 144.3 32.04zM557.4 61.29c-45.11-19.79-88.48-29.61-125.7-29.26c-72.44 1.312-118.1 33.55-120.9 34.92C306.5 69.96 304 74.83 304 80.04v383.1C304 468.4 307.5 480 320 480c3.484 0 6.938-1.125 9.781-3.328c3.925-3.018 97.44-73.16 223.8-14c10.46 4.896 22.45-3.105 22.45-14.65l.0001-357.6C575.1 77.97 568.8 66.31 557.4 61.29z"></path></svg></span>
+          </button>
+          <button class="btn btn-transparent p-0 mr-1" type="submit" onclick="sentAJAX_claps({{post.pk}})">
+              <span class="{% if request.user in post.claps.all %} heart-clicked {% else %} heart {% endif %}" id="claps-button-{{post.pk}}"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="hands-clapping" class="svg-inline--fa fa-hands-clapping" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M320 96c8.844 0 16-7.156 16-16v-64C336 7.156 328.8 0 320 0s-16 7.156-16 16v64C304 88.84 311.2 96 320 96zM383.4 96c5.125 0 10.16-2.453 13.25-7.016l32.56-48c1.854-2.746 2.744-5.865 2.744-8.951c0-8.947-7.273-16.04-15.97-16.04c-5.125 0-10.17 2.465-13.27 7.02l-32.56 48C368.3 73.76 367.4 76.88 367.4 79.97C367.4 88.88 374.7 96 383.4 96zM384 357.5l0-163.9c0-6.016-4.672-33.69-32-33.69c-17.69 0-32.07 14.33-32.07 31.1L320 268.1L169.2 117.3C164.5 112.6 158.3 110.3 152.2 110.3c-13.71 0-24 11.21-24 24c0 6.141 2.344 12.28 7.031 16.97l89.3 89.3C227.4 243.4 228.9 247.2 228.9 251c0 3.8-1.45 7.6-4.349 10.5c-2.899 2.899-6.7 4.349-10.5 4.349c-3.8 0-7.6-1.45-10.5-4.349l-107.6-107.6C91.22 149.2 85.08 146.9 78.94 146.9c-13.71 0-24 11.21-24 24c0 6.141 2.344 12.28 7.031 16.97l107.6 107.6C172.5 298.4 173.9 302.2 173.9 305.1c0 3.8-1.45 7.6-4.349 10.5c-2.899 2.9-6.7 4.349-10.5 4.349c-3.8 0-7.6-1.45-10.5-4.349L59.28 227.2C54.59 222.5 48.45 220.1 42.31 220.1c-13.71 0-24 11.21-24 24c0 6.141 2.344 12.28 7.031 16.97l89.3 89.3c2.9 2.899 4.349 6.7 4.349 10.5c0 3.8-1.45 7.6-4.349 10.5c-2.899 2.899-6.7 4.349-10.5 4.349c-3.8 0-7.6-1.45-10.5-4.349L40.97 318.7C36.28 314 30.14 311.7 24 311.7c-13.71 0-23.99 11.26-23.99 24.05c0 6.141 2.332 12.23 7.02 16.92C112.6 458.2 151.3 512 232.3 512C318.1 512 384 440.9 384 357.5zM243.3 88.98C246.4 93.55 251.4 96 256.6 96c8.762 0 15.99-7.117 15.99-16.03c0-3.088-.8906-6.205-2.744-8.951l-32.56-48C234.2 18.46 229.1 15.98 223.1 15.98c-8.664 0-15.98 7.074-15.98 16.05c0 3.086 .8906 6.205 2.744 8.951L243.3 88.98zM480 160c-17.69 0-32 14.33-32 32v76.14l-32-32v121.4c0 94.01-63.31 141.5-78.32 152.2C345.1 510.9 352.6 512 360.3 512C446.1 512 512 440.9 512 357.5l-.0625-165.6C511.9 174.3 497.7 160 480 160z"></path></svg></span>
+          </button>
+          <span style="font-size: 20px;" id="claps-count-{{post.pk}}">{{post.claps.all.count}}</span>
+        </div>
+      </div>
     </div>
     <a href="/editpost/{{post.id}}/">Edit</a>
     <section id="post-body" style="clear: both;"></section>
+    {% include 'snippets/csrftoken.html' %}
+    {% include 'blog/snippets/readlist_js.html' %}
     <script>
       window.addEventListener("DOMContentLoaded", () => {
         const text = "{{post.body|escapejs}}";
