--- a/templates/snippets/header_2.html
+++ b/templates/snippets/header_2.html
@@ -55,7 +55,7 @@
     }
 </style>
 {% endblock head %}
-<div class="header opt ml-0 mr-0" style="width: 100%; background: var(--primary-light) !important; color: #000 !important;">    
+<div class="header opt ml-0 mr-0" style="width: 100%; background: var(--primary-light) !important; color: #000 !important; z-index: 99999;">    
     <div class="header-content clearfix">
         <div class="header-left">
             <div class="input-group icons">
