--- a/templates/snippets/sidebar_2.html
+++ b/templates/snippets/sidebar_2.html
@@ -21,7 +21,8 @@
             </a>
             <ul>
                 <li><a href="{% url 'blog:blog-home' %}">New Blog</a></li>
-                
+                <li><a href="{% url 'blog:blog-manage' %}">Manage Blog</a></li>
+                <li><a href="{% url 'blog:blog-readlist' %}">Reading List</a></li>
             </ul>
         </li>
         <li>
