Fix responsive layout

--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -65,7 +65,7 @@
         
             <div class="container-fluid" id="main-content" style="padding-top: 7rem;">
                 <div class="row">
-                    <div class="col-md-2 m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px;height: 100vh; ">
+                    <div class="col-xl-2 col-md-3 d-none d-md-block m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px;height: 100vh;">
                         {% include 'snippets/sidebar_2.html' %}
                     </div>
                     
