--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -3,26 +3,15 @@
 {% load static %}
 
 {% block content %}
-<div class="col-md-7 m-0 p-0">
+<div class="col-xl-7 col-12 col-md-9  m-0 p-0">
 	<div class="container">
 
-		<!-- MEDIUM+ SCREENS -->
-		<div class="main d-none d-md-flex flex-column" id="home-content">
-
-			{% block post %}
-			{% endblock post %}
-
-		</div>
-		<!-- END MEDIUM+ SCREENS -->
+		{% block post %}
+		{% endblock post %}
 		
-		<!-- SMALL SCREENS -->
-		<div class="d-flex d-md-none p-2">
-			<p>This site is not meant to be viewed on a mobile device. Please download the <a href="#">app</a>.</p>
-		</div>
-		<!-- END SMALL SCREENS -->
 	</div>
 </div>
-<div class="col-md-3 m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px; height: 100vh;">
+<div class="col-xl-3 m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px; height: 100vh;">
   {% include 'snippets/right-sidebar.html' %}
 </div>
 {% endblock content %}
