--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -11,7 +11,7 @@
 		
 	</div>
 </div>
-<div class="col-xl-3 m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px; height: 100vh;">
+<div class="col-xl-3 d-none d-md-block m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px; height: 100vh;">
   {% include 'snippets/right-sidebar.html' %}
 </div>
 {% endblock content %}
