--- a/personal/templates/personal/home_wide.html
+++ b/personal/templates/personal/home_wide.html
@@ -3,24 +3,27 @@
 {% load static %}
 
 {% block content %}
-<div class="col-md-10 m-0 p-0">
-<div class="container">
+<div class="col-md-8 m-0 p-0">
+	<div class="container">
 
-	<!-- MEDIUM+ SCREENS -->
-	<div class="main d-none d-md-flex flex-column" id="home-content">
+		<!-- MEDIUM+ SCREENS -->
+		<div class="main d-none d-md-flex flex-column" id="home-content">
 
-		{% block post %}
-		{% endblock post %}
+			{% block post %}
+			{% endblock post %}
 
+		</div>
+		<!-- END MEDIUM+ SCREENS -->
+		
+		<!-- SMALL SCREENS -->
+		<div class="d-flex d-md-none p-2">
+			<p>This site is not meant to be viewed on a mobile device. Please download the <a href="#">app</a>.</p>
+		</div>
+		<!-- END SMALL SCREENS -->
 	</div>
-	<!-- END MEDIUM+ SCREENS -->
-	
-	<!-- SMALL SCREENS -->
-	<div class="d-flex d-md-none p-2">
-		<p>This site is not meant to be viewed on a mobile device. Please download the <a href="#">app</a>.</p>
-	</div>
-	<!-- END SMALL SCREENS -->
 </div>
+<div class="col-xl-2 d-none d-md-block m-0 p-0" style="position: -webkit-sticky;position: sticky;top: 100px; height: 100vh;">
+  {% include 'snippets/right-sidebar.html' %}
 </div>
 {% endblock content %}
 
